UX: fix translation dropdown zindex on tablets

--- a/app/assets/stylesheets/common/components/post-translations.scss
+++ b/app/assets/stylesheets/common/components/post-translations.scss
@@ -12,6 +12,11 @@
 
 .post-language-selector-content {
   z-index: z("composer", "dropdown");
+
+  // eventho mobile composer shouldnt be used in conjuction with fk-d-menu (floating version), on tablets the possibility unfortunately exists
+  .discourse-touch & {
+    z-index: z("mobile-composer");
+  }
 }
 
 .post-language-selector-trigger {
